# regional_bufr

./: CMakeLists.txt  README.md  cmake_build.sh
cmake/: PackageConfig.cmake.in
modulefiles/: build_v8.0.0-cray-intel
sorc/: bufr_build.cfg  build_all.sh  build_bufr.sh  build_sndp.sh  build_stnmlist.sh  install_all.sh  machine-setup.sh  partial_build.sh
sorc/rrfs_bufr.fd/: CMakeLists.txt
sorc/rrfs_sndp.fd/: CMakeLists.txt  SNDPST.f  SNDPST_FV3S.f
sorc/rrfs_stnmlist.fd/: CMakeLists.txt
versions/: build.ver  run.ver
